--- a/editor.haml
+++ b/editor.haml
@@ -3,4 +3,4 @@
 %button
   Save
   - on "click", ->
-    - Gistquire.update gistId, {files: {"editor.js": $('textarea').get(0).val()}}
+    - Gistquire.update gistId, {files: {"editor.js": $('textarea').val()}}
