--- a/editor.haml
+++ b/editor.haml
@@ -4,3 +4,5 @@
   Save
   - on "click", ->
     - Gistquire.update gistId, {files: {"editor.haml": {content: $('textarea').val()}}}
+%button
+  Oh My Glob
