--- a/editor.haml
+++ b/editor.haml
@@ -3,6 +3,4 @@
 %button
   Save
   - on "click", ->
-    - Gistquire.update gistId, {files: {"editor.haml": {content: $('textarea').val()}}}
-%button
-  Oh My Glob
+    - Gistquire.update gistId, {files: {"build.js": {content: HAMLjr.compile(HAMLjr.parse($('textarea').val()), name: "test")}, "editor.haml": {content: $('textarea').val()}}}
