--- a/editor.haml
+++ b/editor.haml
@@ -4,3 +4,6 @@
   Save
   - on "click", ->
     - Gistquire.update gistId, {files: {"build.js": {content: HAMLjr.compile(HAMLjr.parser.parse($('textarea').val()), name: "test", compiler: CoffeeScript)}, "editor.haml": {content: $('textarea').val()}}}
+
+%button
+  Badical
