--- a/editor.haml
+++ b/editor.haml
@@ -1,8 +1,10 @@
 %textarea
   = @source
-%button
-  Save
-  - on "click", ->
-    - Gistquire.update gistId, {files: {"build.js": {content: HAMLjr.compile(HAMLjr.parser.parse($('textarea').val()), name: "test", compiler: CoffeeScript) + CoffeeScript.compile(Gistquire.Gists[gistId].files["main.coffee"].content)}, "editor.haml": {content: $('textarea').val()}}}
 
-%button Radical
+%div
+  %button
+    Save
+    - on "click", ->
+      - Gistquire.update gistId, {files: {"build.js": {content: HAMLjr.compile(HAMLjr.parser.parse($('textarea').val()), name: "test", compiler: CoffeeScript) + CoffeeScript.compile(Gistquire.Gists[gistId].files["main.coffee"].content)}, "editor.haml": {content: $('textarea').val()}}}
+
+  %button Radical
