--- a/editor.haml
+++ b/editor.haml
@@ -4,7 +4,6 @@
 %div
   %button
     Save
-    - on "click", ->
-      - Gistquire.update gistId, {files: {"build.js": {content: HAMLjr.compile(HAMLjr.parser.parse($('textarea').val()), name: "test", compiler: CoffeeScript) + CoffeeScript.compile(Gistquire.Gists[gistId].files["main.coffee"].content)}, "editor.haml": {content: $('textarea').val()}}}
+    - on "click", @save
 
   %button Radical
