--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
-textarea {
+.editor-wrap {
   width: 100%;
   height: 400px;
+  position: relative;
+}
+
+.editor-wrap > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .filetree {
