--- a/style.styl
+++ b/style.styl
@@ -1,6 +1,14 @@
-textarea
+.editor-wrap
   width: 100%
   height: 400px
+  position: relative
+
+  & > div
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
 
 .filetree
   width: 200px
