--- a/style.styl
+++ b/style.styl
@@ -3,6 +3,7 @@
   width: 100%
   height: 400px
   position: relative
+  margin-left: 200px
 
   & > div
     position: absolute
@@ -16,6 +17,7 @@
   position: fixed
   left: 0
   top: 40px
+  z-index: 2
 
   li
     list-style-type: none
