--- a/style.styl
+++ b/style.styl
@@ -1,3 +1,7 @@
+.main
+  position: relative
+  padding-left: 200px
+
 .editor-wrap
   background-color: white
   width: 100%
@@ -14,7 +18,7 @@
 
 .filetree
   width: 200px
-  position: fixed
+  position: absolute
   left: 0
   top: 40px
   z-index: 2
