--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.main {
+  position: relative;
+  padding-left: 200px;
+}
+
 .editor-wrap {
   background-color: white;
   width: 100%;
@@ -16,7 +21,7 @@
 
 .filetree {
   width: 200px;
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 40px;
   z-index: 2;
