--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 .main {
   position: relative;
   padding-left: 200px;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .editor-wrap {
