--- a/style.styl
+++ b/style.styl
@@ -1,5 +1,6 @@
 .main
   position: relative
+  padding-top: 40px
   padding-left: 200px
   box-sizing: border-box
 
@@ -27,4 +28,6 @@
     list-style-type: none
 
 .actions
-  margin-bottom: 1em
+  position: absolute
+  top: 0
+  left: 200px
