--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   position: relative;
   padding-top: 40px;
   padding-left: 200px;
+  height: 100%;
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -17,7 +18,7 @@ body {
 .editor-wrap {
   background-color: white;
   width: 100%;
-  height: 400px;
+  height: 100%;
   position: relative;
 }
 
