--- a/style.styl
+++ b/style.styl
@@ -7,11 +7,12 @@ html, body
   padding-top: 40px
   padding-left: 200px
   box-sizing: border-box
+  height: 100%
 
 .editor-wrap
   background-color: white
   width: 100%
-  height: 400px
+  height: 100%
   position: relative
 
   & > div
