--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   position: relative;
   padding-top: 40px;
   padding-left: 200px;
+  padding-bottom: 100px;
   height: 100%;
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -49,4 +50,19 @@ body {
   position: absolute;
   top: 0;
   left: 200px;
+}
+
+.errors {
+  background-color: rgba(0, 0, 0, 0.25);
+  color: red;
+  position: absolute;
+  bottom: 0;
+  left: 200px;
+  height: 100px;
+  width: 100%;
+  margin: 0;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
