--- a/style.styl
+++ b/style.styl
@@ -6,6 +6,7 @@ html, body
   position: relative
   padding-top: 40px
   padding-left: 200px
+  padding-bottom: 100px
   box-sizing: border-box
   height: 100%
 
@@ -39,3 +40,14 @@ html, body
   position: absolute
   top: 0
   left: 200px
+
+.errors
+  background-color: rgba(0, 0, 0, 0.25)
+  box-sizing: border-box
+  color: red
+  position: absolute
+  bottom: 0
+  left: 200px
+  height: 100px
+  width: 100%
+  margin: 0
