--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .errors {
-  background-color: rgba(0, 0, 0, 0.25);
+  border-top: 1px solid black;
   color: red;
   position: absolute;
   bottom: 0;
