--- a/style.styl
+++ b/style.styl
@@ -42,7 +42,7 @@ html, body
   left: 200px
 
 .errors
-  background-color: rgba(0, 0, 0, 0.25)
+  border-top: 1px solid black
   box-sizing: border-box
   color: red
   position: absolute
