--- a/main.haml
+++ b/main.haml
@@ -2,3 +2,4 @@
   = HAMLjr.templates.actions @actions
   = HAMLjr.templates.filetree @filetree
   = HAMLjr.templates.errors @errors
+  = HAMLjr.templates.github_status this
