--- a/style.styl
+++ b/style.styl
@@ -51,3 +51,10 @@ html, body
   height: 100px
   width: 100%
   margin: 0
+
+.status
+  top: 0
+  left: 0
+  position: absolute
+  width: 200px
+  height: 40px
