--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+.status {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 200px;
+  height: 40px;
+}
