--- a/style.styl
+++ b/style.styl
@@ -41,16 +41,19 @@ html, body
   top: 0
   left: 200px
 
-.errors
-  border-top: 1px solid black
+.error-wrap
   box-sizing: border-box
   color: red
   position: absolute
   bottom: 0
-  left: 200px
+  padding-left: 200px
   height: 100px
   width: 100%
   margin: 0
+  
+  .errors
+    box-sizing: border-box
+    border-top: 1px solid black
 
 .status
   top: 0
