--- a/style.css
+++ b/style.css
@@ -52,15 +52,22 @@ body {
   left: 200px;
 }
 
-.errors {
-  border-top: 1px solid black;
+.error-wrap {
   color: red;
   position: absolute;
   bottom: 0;
-  left: 200px;
+  padding-left: 200px;
   height: 100px;
   width: 100%;
   margin: 0;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.error-wrap .errors {
+  border-top: 1px solid black;
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
