--- a/style.styl
+++ b/style.styl
@@ -46,6 +46,8 @@ html, body
   color: red
   position: absolute
   bottom: 0
+  left: 0
+  right: 0
   padding-left: 200px
   height: 100px
   width: 100%
