--- a/main.haml
+++ b/main.haml
@@ -1,5 +1,5 @@
 .main
   = HAMLjr.templates.actions @actions
   = HAMLjr.templates.filetree @filetree
-  = HAMLjr.templates.errors @errors
+  = HAMLjr.templates.errors this
   = HAMLjr.templates.github_status this
