--- a/style.styl
+++ b/style.styl
@@ -41,9 +41,8 @@ html, body
   top: 0
   left: 200px
 
-.error-wrap
+.console-wrap
   box-sizing: border-box
-  color: red
   position: absolute
   bottom: 0
   left: 0
@@ -56,6 +55,7 @@ html, body
   .errors
     box-sizing: border-box
     border-top: 1px solid black
+    color: red
 
 .status
   top: 0
