--- a/errors.haml
+++ b/errors.haml
@@ -1,7 +1,7 @@
 .console-wrap
   %pre.errors
     - each @errors, (error) ->
-      = error.stack
+      = error
   %pre.notices
     - each @notices, (notice) ->
       = notice
