--- a/github_status.haml
+++ b/github_status.haml
@@ -1,6 +1,11 @@
 .status
   - if @request and @request.getAllResponseHeaders().match(/X-RateLimit-Limit: 5000/)
-    Authenticated
+    Authenticated Scopes:
+    = @request.getResponseHeader("X-OAuth-Scopes")
+    %br
+    Rate Limit Remaining:
+    = @request.getResponseHeader("X-RateLimit-Remaining")
+    = " / 5000"
   - else
     %button Auth
       - on "click", Gistquire.auth
