--- a/filetree.haml
+++ b/filetree.haml
@@ -1,11 +1,10 @@
 %ul.filetree
   - selectedFile = @selectedFile
-  - removeFile = @removeFile
   - files = @files
   - each files, (file) ->
     %li= file.path
       - on "click", (e) -> 
         - selectedFile(file) if $(e.target).is('li')
       .delete
-        - on "click", -> files.remove(file)
+        - on "click", -> files.remove(file) if confirm("Delete #{file.path()}?")
         X
