--- a/main.haml
+++ b/main.haml
@@ -1,4 +1,4 @@
 .main
-  = HAMLjr.templates.actions @actions
+  = HAMLjr.templates.actions actions: @actions, issues: @issues
   = HAMLjr.templates.filetree @filetree
   = HAMLjr.templates.errors this
