Updated in browser at strd6.github.io/editor

--- a/filetree.haml
+++ b/filetree.haml
@@ -2,7 +2,7 @@
   - selectedFile = @selectedFile
   - files = @files
   - each files, (file) ->
-    %li= file.path
+    %li= file.displayName
       - on "click", (e) -> 
         - selectedFile(file) if $(e.target).is('li')
       .delete
