Updated in browser at strd6.github.io/editor

--- a/actions.haml
+++ b/actions.haml
@@ -3,6 +3,7 @@
   - Object.keys(actions).each (name) ->
     %button
       = name.titleize()
-      - on "click", actions[name]
+      - on "click", ->
+        - actions[name]()
 
   = HAMLjr.templates.issue_selector @issues
