Updated in browser at strd6.github.io/editor

--- a/issue_selector.haml
+++ b/issue_selector.haml
@@ -1,5 +1,5 @@
 %select
   - on "change", @currentIssue
-  %option
+  %option= "- Default Branch -"
   - each @issues, ->
     %option= @optionText()
