--- a/actions.haml
+++ b/actions.haml
@@ -6,4 +6,4 @@
       - on "click", ->
         - actions[name]()
 
-  = HAMLjr.templates.issue_selector @issues
+  = HAMLjr.templates["templates/issues"] @issues
