Updated in browser at strd6.github.io/editor

--- a/actions.haml
+++ b/actions.haml
@@ -6,4 +6,4 @@
       - on "click", ->
         - actions[name]()
 
-  = HAMLjr.templates["templates/issues"] @issues
+  = HAMLjr.render "issues", @issues
