--- a/style.styl
+++ b/style.styl
@@ -41,6 +41,7 @@ html, body
       display: none
       position: absolute
       right: 0
+      top: 0
 
     &:hover
       background-color: lightyellow
