Updated in browser at strd6.github.io/editor

--- a/style.styl
+++ b/style.styl
@@ -36,6 +36,7 @@ html, body
     list-style-type: none
     padding-left: 1em
     position: relative
+    whitespace: nowrap
 
     .delete
       display: none
