Updated in browser at strd6.github.io/editor

--- a/style.styl
+++ b/style.styl
@@ -55,6 +55,11 @@ html, body
   top: 0
   left: 200px
 
+.repo_info
+  position: absolute
+  top: 0.25em
+  left: 1em
+
 .console-wrap
   box-sizing: border-box
   position: absolute
