Updated in browser at strd6.github.io/editor

--- a/style.styl
+++ b/style.styl
@@ -56,9 +56,16 @@ html, body
   left: 200px
 
 .repo_info
+  box-sizing: border-box
   position: absolute
-  top: 0.25em
-  left: 1em
+  top: 0
+  left: 0
+  padding: 0.25em 1em
+  width: 200px
+  overflow: hidden
+  border-bottom: 1px solid black
+  height: 40px
+  font-size: 0.8em
 
 .console-wrap
   box-sizing: border-box
