--- a/style.styl
+++ b/style.styl
@@ -2,6 +2,10 @@ html, body
   margin: 0
   height: 100%
 
+body
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-weight: 300
+
 .main
   position: relative
   padding-top: 40px
