--- a/docco-docs/docs/templates/github_status.html
+++ b/docco-docs/docs/templates/github_status.html
@@ -1,46 +1,129 @@
-<!DOCTYPE html>
-
 <html>
 <head>
-  <title>templates/github_status</title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-  <link rel="stylesheet" media="all" href="http://strd6.github.io/cdn/parallel/docco.css" />
+<title>templates/github_status</title>
+<style>
+body{
+    margin: 0 auto;
+    font-family: Georgia, Palatino, serif;
+    color: #444444;
+    line-height: 1;
+    max-width: 960px;
+    padding: 30px;
+}
+h1, h2, h3, h4 {
+    color: #111111;
+    font-weight: 400;
+}
+h1, h2, h3, h4, h5, p {
+    margin-bottom: 24px;
+    padding: 0;
+}
+h1 {
+    font-size: 48px;
+}
+h2 {
+    font-size: 36px;
+    /* The bottom margin is small. It's designed to be used with gray meta text
+     * below a post title. */
+    margin: 24px 0 6px;
+}
+h3 {
+    font-size: 24px;
+}
+h4 {
+    font-size: 21px;
+}
+h5 {
+    font-size: 18px;
+}
+a {
+    color: #0099ff;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+}
+a:hover {
+    text-decoration: none;
+    color: #ff6600;
+}
+a:visited {
+    color: purple;
+}
+ul, ol {
+    padding: 0;
+    margin: 0;
+}
+li {
+    line-height: 24px;
+}
+li ul, li ul {
+    margin-left: 24px;
+}
+p, ul, ol {
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 540px;
+}
+pre {
+    padding: 0px 24px;
+    max-width: 800px;
+    white-space: pre-wrap;
+}
+code {
+    font-family: Consolas, Monaco, Andale Mono, monospace;
+    line-height: 1.5;
+    font-size: 13px;
+}
+aside {
+    display: block;
+    float: right;
+    width: 390px;
+}
+blockquote {
+    border-left:.5em solid #eee;
+    padding: 0 2em;
+    margin-left:0;
+    max-width: 476px;
+}
+blockquote  cite {
+    font-size:14px;
+    line-height:20px;
+    color:#bfbfbf;
+}
+blockquote cite:before {
+    content: '\2014 \00A0';
+}
+
+blockquote p {  
+    color: #666;
+    max-width: 460px;
+}
+hr {
+    width: 540px;
+    text-align: left;
+    margin: 0 auto 0 0;
+    color: #999;
+}
+</style>
 </head>
 <body>
-  <div id="container">
-    <div id="background"></div>
-    <ul class="sections">
-        
-        
-        <li id="section-1">
-            <div class="annotation">
-              <div class="pilwrap">
-                <a class="pilcrow" href="#section-1">&#182;</a>
-              </div>
-              <p>Display information about the current Github api session.</p>
+<p>Display information about the current Github api session.</p>
 
-            </div>
-            <div class="content"><pre><code class="lang-coffeescript">.status
-  - github = <span class="keyword">this</span>
-  - <span class="reserved">with</span> <span class="property">@lastRequest</span>, -&gt;
+<pre><code>.status
+  - github = this
+  - with @lastRequest, -&gt;
     %div
-      - <span class="keyword">if</span> <span class="property">@getAllResponseHeaders</span> <span class="keyword">and</span> <span class="property">@getAllResponseHeaders</span>().match(<span class="regexp">/X-RateLimit-Limit: 5000/</span>)
+      - if @getAllResponseHeaders and @getAllResponseHeaders().match(/X-RateLimit-Limit: 5000/)
         Authenticated Scopes:
-        = <span class="property">@getResponseHeader</span>(<span class="string">"X-OAuth-Scopes"</span>)
+        = @getResponseHeader("X-OAuth-Scopes")
         %br
         Rate Limit Remaining:
-        = <span class="property">@getResponseHeader</span>(<span class="string">"X-RateLimit-Remaining"</span>)
-        = <span class="string">" / 5000"</span>
-      - <span class="keyword">else</span>
+        = @getResponseHeader("X-RateLimit-Remaining")
+        = " / 5000"
+      - else
         %button Auth
-          - <span class="literal">on</span> <span class="string">"click"</span>, -&gt;
-            - window.location = github.authorizationUrl(<span class="string">"bc46af967c926ba4ff87"</span>, <span class="string">"gist,repo,user:email"</span>)</code></pre>
-</div>
-        </li>
-        
-    </ul>
-  </div>
-  
+          - on "click", -&gt;
+            - window.location = github.authorizationUrl("bc46af967c926ba4ff87", "gist,repo,user:email")
+</code></pre>
 </body>
 </html>
