--- a/style.styl
+++ b/style.styl
@@ -31,8 +31,11 @@ body
   margin: 0
   padding: 0
   width: 200px
+  overflow-x: hidden
+  overflow-y: auto
   position: absolute
   left: 0
+  bottom: 0
   top: 40px
   z-index: 2
 
