--- a/docs/templates/github_status.html
+++ b/docs/templates/github_status.html
@@ -18,6 +18,20 @@
               <div class="pilwrap">
                 <a class="pilcrow" href="#section-1">&#182;</a>
               </div>
+              <h1 id="github-status">Github Status</h1>
+
+            </div>
+            <div class="content"><pre><code class="lang-haml">
+</code></pre>
+</div>
+        </li>
+        
+        
+        <li id="section-2">
+            <div class="annotation">
+              <div class="pilwrap">
+                <a class="pilcrow" href="#section-2">&#182;</a>
+              </div>
               <p>Display information about the current Github api session.</p>
 
             </div>
