--- a/style.styl
+++ b/style.styl
@@ -14,18 +14,11 @@ body
   box-sizing: border-box
   height: 100%
 
-.editor-wrap
-  background-color: white
-  width: 100%
-  height: 100%
-  position: relative
-
-  & > div
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
+  iframe
+    border: none
+    display: block
+    width: 100%
+    height: 100%
 
 .filetree
   margin: 0
