:wolf::performing_arts: Updated in browser at strd6.github.io/editor

--- a/update-hamlet/docs/templates/actions.html
+++ b/update-hamlet/docs/templates/actions.html
@@ -51,7 +51,7 @@ the editor.</p>
               <p>The issues selector is also rendered in the actions bar.</p>
 
             </div>
-            <div class="content"><pre><code class="lang-haml">  = HAMLjr.render &quot;issues&quot;, @issues</code></pre>
+            <div class="content"><pre><code class="lang-haml">  -# = HAMLjr.render &quot;issues&quot;, @issues</code></pre>
 </div>
         </li>
         
