:globe_with_meridians::closed_umbrella: Updated in browser at strd6.github.io/editor

--- a/update-hamlet/docs/templates/actions.html
+++ b/update-hamlet/docs/templates/actions.html
@@ -36,9 +36,10 @@ the editor.</p>
               <p>Render a series of buttons, one for each action.</p>
 
             </div>
-            <div class="content"><pre><code class="lang-haml">  - Object.keys(actions).each (name) -&gt;
-    %button(click=actions[name])
-      = name.titleize()</code></pre>
+            <div class="content"><pre><code class="lang-haml">  %span
+    - Object.keys(actions).each (name) -&gt;
+      %button(click=actions[name])
+        = name.titleize()</code></pre>
 </div>
         </li>
         
@@ -51,7 +52,8 @@ the editor.</p>
               <p>The issues selector is also rendered in the actions bar.</p>
 
             </div>
-            <div class="content"><pre><code class="lang-haml">  -# = HAMLjr.render &quot;issues&quot;, @issues</code></pre>
+            <div class="content"><pre><code class="lang-haml">  %span
+    = require(&quot;issues&quot;).templates.issues @issues</code></pre>
 </div>
         </li>
         
