--- a/update-hamlet/docs/templates/editor.html
+++ b/update-hamlet/docs/templates/editor.html
@@ -23,8 +23,9 @@
             </div>
             <div class="content"><pre><code class="lang-haml">.main
   = require(&quot;./actions&quot;) actions: @actions, issues: @issues
-  -# TODO: = require(&quot;./filetree&quot;) @filetree
-  = @notifications.view
+  = require(&quot;filetree&quot;).template @filetree
+  -# TODO: Figure out why we can&#39;t just add the notifications view directly
+  = @notifications.view.children[0]
   = require(&quot;./repo_info&quot;) @repository
   = require(&quot;./github_status&quot;) @github</code></pre>
 </div>
