--- a/update-hamlet/docs/templates/editor.html
+++ b/update-hamlet/docs/templates/editor.html
@@ -23,7 +23,7 @@
             </div>
             <div class="content"><pre><code class="lang-haml">.main
   = require(&quot;./actions&quot;) actions: @actions, issues: @issues
-  = require(&quot;filetree&quot;).template @filetree
+  = require(&quot;./filetree&quot;) @filetree
   -# TODO: Figure out why we can&#39;t just add the notifications view directly
   = @notifications.view.children[0]
   = require(&quot;./repo_info&quot;) @repository
