:abcd::mega: Updated in browser at strd6.github.io/editor

--- a/style.styl
+++ b/style.styl
@@ -57,6 +57,9 @@ body
   left: 200px
   z-index: 1
 
+  button
+    margin-right: 0.25em
+
 .repo_info
   box-sizing: border-box
   position: absolute
