--- a/update-packager/docs/templates/editor.html
+++ b/update-packager/docs/templates/editor.html
@@ -22,11 +22,12 @@
 
             </div>
             <div class="content"><pre><code class="lang-haml">.main
-  = HAMLjr.render &quot;actions&quot;, actions: @actions, issues: @issues
-  = HAMLjr.render &quot;filetree&quot;, @filetree
-  = @notifications.view
-  = HAMLjr.render &quot;repo_info&quot;, @repository
-  = HAMLjr.render &quot;github_status&quot;, @github</code></pre>
+  = require(&quot;./actions&quot;) actions: @actions, issues: @issues
+  = require(&quot;./filetree&quot;) @filetree
+  -# TODO: Figure out why we can&#39;t just add the notifications view directly
+  = @notifications.view.children[0]
+  = require(&quot;./repo_info&quot;) @repository
+  = require(&quot;./github_status&quot;) @github</code></pre>
 </div>
         </li>
         
@@ -35,7 +36,8 @@
   <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-<script src="http://www.danielx.net/tempest/javascripts/envweb-v0.4.7.js"></script><script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script><script>
   (function() {
   var ErrorReporter, bindUpdates, createEditor, exec, findInteractiveElements, readShebang, runners;
 
