--- a/templates/filetree.haml
+++ b/templates/filetree.haml
@@ -1,7 +1,7 @@
 %ul.filetree
   - selectedFile = @selectedFile
   - files = @files
-  - each files, (file) ->
+  - files.forEach (file) ->
     - select = (e) -> selectedFile(file) if e.target.nodeName is 'LI'
     %li(click=select)= file.displayName
       - remove = -> files.remove(file) if confirm("Delete #{file.path()}?")
