:arrow_double_up::chicken: Updated in browser at strd6.github.io/editor

--- a/refactor/docs/templates/editor.html
+++ b/refactor/docs/templates/editor.html
@@ -25,9 +25,7 @@
   = require(&quot;./actions&quot;) actions: @actions, issues: @issues
   = require(&quot;./filetree&quot;) @filetree
   -# TODO: Figure out why we can&#39;t just add the notifications view directly
-  = @notifications.view.children[0]
-  = require(&quot;./repo_info&quot;) @repository
-  = require(&quot;./github_status&quot;) @github</code></pre>
+  = @notifications.view.children[0]</code></pre>
 </div>
         </li>
         
