:video_camera::mountain_railway: Updated in browser at strd6.github.io/editor

--- a/refactor/docs/templates/actions.html
+++ b/refactor/docs/templates/actions.html
@@ -38,7 +38,10 @@ the editor.</p>
             <div class="content"><pre><code class="lang-haml">  %span
     - @actions.each ({name, handler}) -&gt;
       %button(click=handler)
-        = name.titleize()</code></pre>
+        = name.titleize()
+  %span
+    %b Path
+    %input(value=@path)</code></pre>
 </div>
         </li>
         
