--- a/docs/templates/editor.html
+++ b/docs/templates/editor.html
@@ -27,7 +27,8 @@
   -# TODO: Figure out why we can&#39;t just add the notifications view directly
   = @notifications.view.children[0]
   = require(&quot;./repo_info&quot;) @repository
-  = require(&quot;./github_status&quot;) @github</code></pre>
+  = require(&quot;./github_status&quot;) @github
+  #ace</code></pre>
 </div>
         </li>
         
@@ -35,6 +36,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script><script>
