:helicopter::ear_of_rice: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -37,7 +37,7 @@ body
     list-style-type: none
     padding-left: 1em
     position: relative
-    whitespace: nowrap
+    white-space: nowrap
 
     .delete
       display: none
